--- a/reto/Entrega1/index.html
+++ b/reto/Entrega1/index.html
@@ -67,8 +67,10 @@
             });
 
         // SCENE GRAPH
+        const traffic1 = new TrafficLight(1, 1, 1);
         scene.add(scenary);
         scene.add(model);
+        scene.add(traffic1);
 
         // CAMERA (PERSPECTIVE)
         const fov = 60;    // Field ov view
@@ -121,7 +123,7 @@
 
     function updateScene() {
         if (model && model.animate) {
-            model.move(0.2, 90)
+            model.move(0)
             //model.rotation.y = model.rotation.y + 0.01;
         }
         if (camera && camera.viewNum == 0) {
@@ -251,66 +253,24 @@
     }
 
     class SportsCar extends THREE.Group {
-        constructor(objFileName = "./assets/obj/Car1.obj") {
+        constructor(gltfFileName = "./assets/gltf/car1.glb") {
             super();
-            this.color = 0xcc0000;
-            this.wireColor = 0xffffff;
-            this.doubleSide = false;
-            this.rotate = false;
-            this.objFileName = objFileName;
-            this.loadOBJModel(objFileName);
+            this.gltfFileName = gltfFileName;
+            this.loadGLTFModel(gltfFileName);
         }
 
-        loadOBJModel(objFileName) {
+        loadGLTFModel(gltfFileName) {
             // instantiate a loader
             // load a resource
             model = this;
-            objLoader.load(objFileName,
+            gltfLoader.load(gltfFileName,
                 // called when resource is loaded
-                function (object) {
+                function (gltf) {
                     // SOLID
-                    object.traverse(function (child) {
-                        if (child.isMesh) {
-                            child.material = new THREE.MeshBasicMaterial({color: model.color});
-                        }
-                    });
-                    model.solid = object;
-                    // WIRE
-                    model.wire = object.clone();
-                    model.wire.traverse(function (child) {
-                        if (child.isMesh) {
-                            child.material = new THREE.MeshBasicMaterial({wireframe: true, color: model.wireColor});
-                        }
-                    });
-                    /*          model.rotation.y = Math.PI;
-                              model.scale.set(2, 2, 2);*/
-                    // CHILDREN
-                    model.add(model.solid);
-                    model.add(model.wire);
-                    scene.add(model);
-                    model.setOnFloor();
+                    gltf.scene.position.y = -0.5;
+                    scene.add(gltf.scene);
 
-                    // MODEL-MENU
-                    const guiModelMenu = gui.addFolder("Model Menu");
-                    // GUI-Model
-                    guiModelMenu.add(model, "visible").setValue(model.visible).name("Visible").listen().onChange(function (value) {
 
-                    });
-                    guiModelMenu.add(model.solid, "visible").setValue(model.solid.visible).name("Wireframe").listen().onChange(function (value) {
-
-                    });
-                    guiModelMenu.add(model, "doubleSide").setValue(model.doubleSide).name("Double Side").listen().onChange(function (value) {
-                        model.setDoubleSide(value);
-                    });
-                    guiModelMenu.addColor(model, "color").name("Color").setValue(model.color).listen().onChange(function (value) {
-                        model.setColor(value);
-                    });
-                    guiModelMenu.addColor(model, "wireColor").name("Wire Color").setValue(model.wireColor).listen().onChange(function (value) {
-                        model.setWireColor(value);
-                    });
-                    guiModelMenu.add(model, "animate").setValue(model.animate).name("Animate").listen().onChange(function (value) {
-
-                    });
                 },
                 // called when loading is in progresses
                 function (xhr) {
@@ -321,43 +281,6 @@
                     console.log('An error happened' + error);
                 }
             );
-        }
-
-        setColor(hexColor) {
-            this.color = hexColor;
-            this.solid.traverse(function (child) {
-                if (child.isMesh) {
-                    child.material.color.setHex(hexColor);
-                }
-            });
-        }
-
-        setWireColor(hexColor) {
-            this.wireColor = hexColor;
-            this.wire.traverse(function (child) {
-                if (child.isMesh) {
-                    child.material.color.setHex(hexColor);
-                }
-            });
-        }
-
-        setDoubleSide(value) {
-            this.doubleSide = value;
-            this.solid.traverse(function (child) {
-                if (child.isMesh) {
-                    if (value) {
-                        child.material.side = THREE.DoubleSide;
-                    } else {
-                        child.material.side = THREE.FrontSide;
-                    }
-                }
-            });
-        }
-
-        setOnFloor() {
-            const bBox = new THREE.Box3();
-            bBox.setFromObject(this.solid);
-            this.position.y = -bBox.min.y;
         }
     }
 
@@ -387,10 +310,6 @@
     class Streets extends THREE.Group {
         constructor(gltfFileName = "./assets/gltf/street.glb") {
             super();
-            this.color = 0xcc0000;
-            this.wireColor = 0xffffff;
-            this.doubleSide = false;
-            this.rotate = false;
             this.gltfFileName = gltfFileName;
             this.loadGLTFModel(gltfFileName);
         }
@@ -434,15 +353,17 @@
     }
 
     class TrafficLight extends THREE.Group {
-        constructor(size = 1000) {
+        constructor(x, y, z) {
             super();
-            this.axes = new Axes(size);
-            this.streets = new Streets();
-
-            // CHILDREN
-            this.add(this.axes);
-            this.add(this.streets)
-
+            const greenLight = new THREE.PointLight( 0xff0000, 1, 100 );
+            const yellowLight = new THREE.PointLight( 0xff0000, 1, 100 );
+            const redLight = new THREE.PointLight( 0xff0000, 1, 100 );
+            greenLight.position.set( x + 10, y, z);
+            yellowLight.position.set( x + 10, y, z);
+            redLight.position.set( x + 10, y, z);
+            scene.add(greenLight);
+            scene.add(yellowLight);
+            scene.add(redLight);
         }
     }
 </script>
