--- a/reto/Entrega1/index.html
+++ b/reto/Entrega1/index.html
@@ -42,7 +42,11 @@
         gui,
         data,
         dataReady = false,
-        k = 0;
+        k = 0,
+        traffic1,
+        traffic2,
+        traffic3,
+        traffic4;
       let loadProgress = 0;
       let cars = [];
 
@@ -93,15 +97,16 @@
           });
 
         // SCENE GRAPH
-        const traffic1 = new TrafficLight(-17.8, 6.59, -7.95, 0);
-        const traffic2 = new TrafficLight(12.8, 6.59, 10, 180);
-        const traffic3 = new TrafficLight(7.5, 6.59, -18.5, 90);
-        const traffic4 = new TrafficLight(-8.55, 6.59, 15.1, 270);
+        traffic1 = new TrafficLight(-17.8, 6.59, -7.95, 0);
+        traffic2 = new TrafficLight(12.8, 6.59, 10, 180);
+        traffic3 = new TrafficLight(7.5, 6.59, -18.5, 90);
+        traffic4 = new TrafficLight(-8.55, 6.59, 15.1, 270);
         scene.add(traffic1);
         scene.add(traffic2);
         scene.add(traffic3);
         scene.add(traffic4);
         traffic3.changeState(2);
+
         scene.add(scenary);
 
         // const cars = [];
@@ -162,9 +167,9 @@
 
       function renderLoop() {
         stats.begin();
-        setTimeout( () => {
-          requestAnimationFrame( updateScene );
-        }, 1000 / 24 );
+        setTimeout(() => {
+          requestAnimationFrame(updateScene);
+        }, 1000 / 24);
 
         renderer.render(scene, camera); // DRAW THE SCENE GRAPH
         //updateScene();
@@ -210,7 +215,20 @@
                 scene.add(car);
               } else {
                 //car.moveCar(carX - 500 / scaleFactorLocal, carZ - 500 / scaleFactorLocal);
-                car.moveCar(carX , carZ );
+                car.moveCar(carX, carZ);
+              }
+            }
+            for (let i = 0; i < data.frames[k].lights.length; i++) {
+              const traffLightState = data.frames[k].lights[i].state;
+              const traffLightID = data.frames[k].lights[i].id;
+
+              console.log(traffLightID);
+              console.log(traffLightState);
+
+              if (traffLightID == 1) {
+                traffic3.changeState(traffLightState);
+              } else if (traffLightID == 2) {
+                traffic4.changeState(traffLightState);
               }
             }
           }
@@ -440,108 +458,104 @@
 
       class TrafficLight extends THREE.Group {
         constructor(x, y, z, direction) {
-            super();
-            const geometry = new THREE.SphereGeometry(0.15, 32, 16);
-            this.greenMaterial = new THREE.MeshStandardMaterial({
-                emissive: 0x00ff00,
-                emissiveIntensity: 0,
-                color: 0x000000,
-                roughness: 1
-            });
-            this.yellowMaterial = new THREE.MeshStandardMaterial({
-                emissive: 0xffff00,
-                emissiveIntensity: 1,
-                color: 0x000000,
-                roughness: 1
-            });
-            this.redMaterial = new THREE.MeshStandardMaterial({
-                emissive: 0xff0000,
-                emissiveIntensity: 0,
-                color: 0x000000,
-                roughness: 1
-            });
+          super();
+          const geometry = new THREE.SphereGeometry(0.15, 32, 16);
+          this.greenMaterial = new THREE.MeshStandardMaterial({
+            emissive: 0x00ff00,
+            emissiveIntensity: 0,
+            color: 0x000000,
+            roughness: 1,
+          });
+          this.yellowMaterial = new THREE.MeshStandardMaterial({
+            emissive: 0xffff00,
+            emissiveIntensity: 1,
+            color: 0x000000,
+            roughness: 1,
+          });
+          this.redMaterial = new THREE.MeshStandardMaterial({
+            emissive: 0xff0000,
+            emissiveIntensity: 0,
+            color: 0x000000,
+            roughness: 1,
+          });
 
+          this.greenMesh = new THREE.Mesh(geometry, this.greenMaterial);
+          this.yellowMesh = new THREE.Mesh(geometry, this.yellowMaterial);
+          this.redMesh = new THREE.Mesh(geometry, this.redMaterial);
+          this.greenLight = new THREE.PointLight(0x00ff00, 1, 10);
+          this.yellowLight = new THREE.PointLight(0xffff00, 1, 10);
+          this.redLight = new THREE.PointLight(0xff0000, 1, 10);
 
+          const offset = 0.36;
+          let xOffset;
+          let zOffset;
 
-            this.greenMesh = new THREE.Mesh(geometry, this.greenMaterial);
-            this.yellowMesh = new THREE.Mesh(geometry, this.yellowMaterial);
-            this.redMesh = new THREE.Mesh(geometry, this.redMaterial);
-            this.greenLight = new THREE.PointLight(0x00ff00, 1, 10);
-            this.yellowLight = new THREE.PointLight(0xffff00, 1, 10);
-            this.redLight = new THREE.PointLight(0xff0000, 1, 10);
+          switch (direction) {
+            case 0:
+              zOffset = -offset;
+              xOffset = 0;
+              break;
+            case 90:
+              zOffset = 0;
+              xOffset = +offset;
+              break;
+            case 180:
+              zOffset = +offset;
+              xOffset = 0;
+              break;
+            case 270:
+              zOffset = 0;
+              xOffset = -offset;
+              break;
+          }
 
-            const offset = 0.36;
-            let xOffset;
-            let zOffset;
+          this.greenMesh.position.set(x, y, z);
+          this.yellowMesh.position.set(x + xOffset, y, z + zOffset);
+          this.redMesh.position.set(x + xOffset * 2, y, z + zOffset * 2);
+          this.greenLight.position.set(x, y, z);
+          this.yellowLight.position.set(x + xOffset, y, z + zOffset);
+          this.redLight.position.set(x + xOffset * 2, y, z + zOffset * 2);
 
-            switch (direction) {
-                case 0:
-                    zOffset = -offset
-                    xOffset = 0;
-                    break;
-                case 90:
-                    zOffset = 0
-                    xOffset = + offset;
-                    break;
-                case 180:
-                    zOffset = +offset
-                    xOffset = 0;
-                    break;
-                case 270:
-                    zOffset = 0;
-                    xOffset = -offset;
-                    break;
+          this.add(this.greenLight);
+          this.add(this.yellowLight);
+          this.add(this.redLight);
+          this.add(this.greenMesh);
+          this.add(this.redMesh);
+          this.add(this.yellowMesh);
 
-            }
-
-            this.greenMesh.position.set(x, y, z)
-            this.yellowMesh.position.set(x + xOffset, y, z + zOffset)
-            this.redMesh.position.set(x + (xOffset * 2), y, z + (zOffset * 2))
-            this.greenLight.position.set(x, y, z);
-            this.yellowLight.position.set(x + xOffset, y, z + zOffset)
-            this.redLight.position.set(x + (xOffset * 2), y, z + (zOffset * 2))
-
-            this.add(this.greenLight);
-            this.add(this.yellowLight);
-            this.add(this.redLight);
-            this.add(this.greenMesh);
-            this.add(this.redMesh);
-            this.add(this.yellowMesh);
-
-            this.changeState(0);
+          this.changeState(0);
         }
 
         changeState(state) {
-            const lightOff = 0.1
-            const lightOn = 10
-            const emissivityOn = 1;
-            const emissivityOff = 0;
+          const lightOff = 0.1;
+          const lightOn = 10;
+          const emissivityOn = 1;
+          const emissivityOff = 0;
 
-            this.greenLight.intensity = lightOff;
-            this.yellowLight.intensity = lightOff;
-            this.redLight.intensity = lightOff;
+          this.greenLight.intensity = lightOff;
+          this.yellowLight.intensity = lightOff;
+          this.redLight.intensity = lightOff;
 
-            this.greenMesh.material.emissiveIntensity = emissivityOff;
-            this.yellowMesh.material.emissiveIntensity = emissivityOff;
-            this.redMesh.material.emissiveIntensity = emissivityOff;
+          this.greenMesh.material.emissiveIntensity = emissivityOff;
+          this.yellowMesh.material.emissiveIntensity = emissivityOff;
+          this.redMesh.material.emissiveIntensity = emissivityOff;
 
-            switch (state) {
-                case 0:
-                    this.greenLight.intensity = lightOn;
-                    this.greenMesh.material.emissiveIntensity = emissivityOn;
-                    break;
-                case 1:
-                    this.yellowLight.intensity = lightOn;
-                    this.yellowMesh.material.emissiveIntensity = emissivityOn;
-                    break;
-                case 2:
-                    this.redLight.intensity = lightOn;
-                    this.redMesh.material.emissiveIntensity = emissivityOn;
-                    break;
-            }
-
+          switch (state) {
+            case 0:
+              this.greenLight.intensity = lightOn;
+              this.greenMesh.material.emissiveIntensity = emissivityOn;
+              break;
+            case 1:
+              this.yellowLight.intensity = lightOn;
+              this.yellowMesh.material.emissiveIntensity = emissivityOn;
+              break;
+            case 2:
+              this.redLight.intensity = lightOn;
+              this.redMesh.material.emissiveIntensity = emissivityOn;
+              break;
+          }
         }
-    }
+      }
     </script>
   </body>
 </html>
