--- a/reto/Entrega1/index.html
+++ b/reto/Entrega1/index.html
@@ -97,10 +97,10 @@
           });
 
         // SCENE GRAPH
-        traffic1 = new TrafficLight(-17.8, 6.59, -7.95, 0);
-        traffic2 = new TrafficLight(12.8, 6.59, 10, 180);
-        traffic3 = new TrafficLight(7.5, 6.59, -18.5, 90);
-        traffic4 = new TrafficLight(-8.55, 6.59, 15.1, 270);
+        traffic1 = new TrafficLight(-17.8, 6.59 - 1, -7.95, 0);
+        traffic2 = new TrafficLight(12.8, 6.59 - 1, 10, 180);
+        traffic3 = new TrafficLight(7.5, 6.59 - 1, -18.5, 90);
+        traffic4 = new TrafficLight(-8.55, 6.59 - 1, 15.1, 270);
         scene.add(traffic1);
         scene.add(traffic2);
         scene.add(traffic3);
